--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 <body>
   <div class="rect" data-aos="fade-left"></div>
 
-  <header data-aos="fade-in" class="header mw-container">
-    <nav class="navbar">
-    <div class="header__wrapper">
+<header class="header">
+
+    <nav v class="navbar mw-container">   <div class="header__wrapper">
         <a href="index.html">
           <p class="header__name">Henrique Nunes</p>
           <p class="header__wrapper__job">Ostéopathe à Bruges</p>
@@ -100,7 +100,10 @@
     </div>
     </nav>
   </header>
-  <main>
+  <main id="up" class="main">
+    <a href="#up" class="icon__wrapper">
+      <img src="./assets/images/ArrowUpIcon.svg" alt="icon fleche">
+    </a>
     <section data-aos="fade-right" class="hero sect-mb mw-container">
       <div class="hero__wrapper">
         <h1>
