--- a/quand-consulter-un-osteopathe.html
+++ b/quand-consulter-un-osteopathe.html
@@ -58,9 +58,8 @@
 
 <body>
 
-  <header data-aos="fade-in" class="header mw-container">
-    <nav class="navbar">
-    <div class="header__wrapper">
+  <header class="header">
+    <nav class="navbar mw-container">    <div class="header__wrapper">
         <a href="index.html">
           <p class="header__name">Henrique Nunes</p>
           <p class="header__wrapper__job">Ostéopathe à Bruges</p>
@@ -96,8 +95,10 @@
     </div>
     </nav>
   </header>
-  <main class="">
-
+  <main id="up" class="main">
+    <a href="#up" class="icon__wrapper">
+      <img src="./assets/images/ArrowUpIcon.svg" alt="icon fleche">
+    </a>
     <section data-aos="fade-in" class="banner banner-intro">
       <img class="banner__img" src="./assets/images/bannerwhen.webp" loading="lazy" alt="séance osteopathie">
       <div class="banner__wrapper banner__wrapper--intro">
@@ -510,8 +511,7 @@
                 <p class="article__wrapper__text">En définitive, l'<strong>ostéopathie</strong> confère aux <strong>salariés</strong> une meilleure adaptation à
                   leurs <strong>contraintes</strong> de travail, permettant ainsi un <strong>gain</strong> de <strong>concentration</strong> dans une optique de recherche de
                   <strong>productivité</strong>.</p>
-                <p class="article__wrapper__text">Pour tout <strong>renseignement</strong> concernant l'<strong>intervention</strong> de votre <strong>ostéopathe</strong> en
-                  <strong>entreprise</strong>, n'hésitez pas à la <strong>contacter</strong> par <strong>téléphone</strong> ou par <strong>mail</strong> via la rubrique "Contact".</p>
+                
             </article>
           </div>
           <img data-aos="fade-left" class="article__wrapper__img" src="./assets/images/osteopathie-entreprise.webp" alt="équipe de travail">
