--- a/consultation-osteopathie.html
+++ b/consultation-osteopathie.html
@@ -58,9 +58,10 @@
 
 <body>
 
-  <header data-aos="fade-in" class="header mw-container">
-    <nav class="navbar">
-    <div class="header__wrapper">
+<header class="header">
+
+    <nav class="navbar mw-container">    
+      <div class="header__wrapper">
         <a href="index.html">
           <p class="header__name">Henrique Nunes</p>
           <p class="header__wrapper__job">Ostéopathe à Bruges</p>
@@ -96,7 +97,10 @@
     </div>
     </nav>
   </header>
-  <main class="">
+  <main id="up" class="main">
+    <a href="#up" class="icon__wrapper">
+      <img src="./assets/images/ArrowUpIcon.svg" alt="icon fleche">
+    </a>
     <section class="banner banner-intro">
       <img class="banner__img" src="./assets/images/banner-osteo.webp" alt="séance osteopathie" loading="lazy">
       <div class="banner__wrapper banner__wrapper--intro">
