--- a/osteopathe.html
+++ b/osteopathe.html
@@ -58,9 +58,9 @@
 
 <body>
 
-  <header data-aos="fade-in" class="header mw-container">
-    <nav class="navbar">
-    <div class="header__wrapper">
+<header class="header">
+
+    <nav class="navbar mw-container">    <div class="header__wrapper">
         <a href="index.html">
           <p class="header__name">Henrique Nunes</p>
           <p class="header__wrapper__job">Ostéopathe à Bruges</p>
@@ -96,7 +96,10 @@
     </div>
     </nav>
   </header>
-  <main class="">
+  <main id="up" class="main">
+    <a href="#up" class="icon__wrapper">
+      <img src="./assets/images/ArrowUpIcon.svg" alt="icon fleche">
+    </a>
 
     <section data-aos="fade-in" class="banner banner-intro">
       <img class="banner__img" loading="lazy" src="./assets/images/bannerTeam.webp" alt="séance ostéopathie">
