--- a/consultation-osteopathie.html
+++ b/consultation-osteopathie.html
@@ -107,7 +107,7 @@
        <h1 class="banner__title banner__title--intro">Consultation d'Ostéopathie</h1>
       </div>
     </section>
-    <div class="mw-container article">
+    <div data-aos="fade-in" class="mw-container article">
         <p class="article__intro"> <strong>Une séance d’ostéopathie</strong> dure généralement entre <strong>45 minutes et une heure</strong>. Lors de cette consultation, l’ostéopathe prend le temps de connaître son patient et d’évaluer ses antécédents pour répondre efficacement à ses besoins.</p>
         <article class="article__wrapper">
             <h2 class="article__wrapper__title">L'interrogatoire</h2>
@@ -176,11 +176,11 @@
         <div class="content-consultation">
           <p class="article__wrapper__text"> <span class="content-consultation__day">Horaires :</span></p>
           <div>
-            <p class="article__wrapper__text"><span class="content-consultation__day">Lundi</span> <span>14:00 -
+            <p class="article__wrapper__text"><span class="content-consultation__day">Lundi</span> <span>14h00-
                 20h00</span></p>
-            <p class="article__wrapper__text"><span class="content-consultation__day">Mardi</span> <span>9:30 -
+            <p class="article__wrapper__text"><span class="content-consultation__day">Mardi</span> <span>9h30 -
                 15h30</span></p>
-            <p class="article__wrapper__text"><span class="content-consultation__day">Vendredi</span> <span>9:30 -
+            <p class="article__wrapper__text"><span class="content-consultation__day">Vendredi</span> <span>9h30 -
                 19h30</span></p>
           </div>
         </div>
