--- a/osteopathie.html
+++ b/osteopathie.html
@@ -106,7 +106,7 @@
        <h1 class="banner__title banner__title--intro">L’ostéopathie </h1>
       </div>
     </section>
-    <div class="mw-container article">
+    <div data-aos="fade-in" class="mw-container article">
       <article class="article__intro">
         <h2 class="article__wrapper__title">Ostéopathie : Une Thérapie Reconnue</h2>
         <p class="article__intro"><strong>L'ostéopathie</strong> est une pratique thérapeutique <strong>manuelle</strong> née vers <strong>1870</strong> aux <strong>États-Unis</strong> grâce au médecin <strong>Andrew Taylor Still</strong>. Introduite en <strong>France</strong> dans les années 50, elle a vu son succès grandir au fil des ans et est aujourd'hui une <strong>thérapie reconnue</strong>. Elle a été <strong>réglementée</strong> par la loi du <strong>4 mars 2002</strong> relative aux <strong>droits des patients</strong> et à la <strong>qualité du système de santé</strong>.</p>
@@ -189,11 +189,11 @@
         <div class="content-consultation">
           <p class="article__wrapper__text"> <span class="content-consultation__day">Horaires :</span></p>
           <div>
-            <p class="article__wrapper__text"><span class="content-consultation__day">Lundi</span> <span>14:00 -
+            <p class="article__wrapper__text"><span class="content-consultation__day">Lundi</span> <span>14h00-
                 20h00</span></p>
-            <p class="article__wrapper__text"><span class="content-consultation__day">Mardi</span> <span>9:30 -
+            <p class="article__wrapper__text"><span class="content-consultation__day">Mardi</span> <span>9h30 -
                 15h30</span></p>
-            <p class="article__wrapper__text"><span class="content-consultation__day">Vendredi</span> <span>9:30 -
+            <p class="article__wrapper__text"><span class="content-consultation__day">Vendredi</span> <span>9h30 -
                 19h30</span></p>
           </div>
         </div>
