--- a/quand-consulter-un-osteopathe.html
+++ b/quand-consulter-un-osteopathe.html
@@ -99,7 +99,7 @@
     <a href="#up" class="icon__wrapper">
       <img src="./assets/images/ArrowUpIcon.svg" alt="icon fleche">
     </a>
-    <section data-aos="fade-in" class="banner banner-intro">
+    <section class="banner banner-intro">
       <img class="banner__img" src="./assets/images/bannerwhen.webp" loading="lazy" alt="séance osteopathie">
       <div class="banner__wrapper banner__wrapper--intro">
         <h1 class="banner__title banner__title--intro">Quand Consulter un Ostéopathe ?</h1>
@@ -551,11 +551,11 @@
         <div class="content-consultation">
           <p class="article__wrapper__text"> <span class="content-consultation__day">Horaires :</span></p>
           <div>
-            <p class="article__wrapper__text"><span class="content-consultation__day">Lundi</span> <span>14:00 -
+            <p class="article__wrapper__text"><span class="content-consultation__day">Lundi</span> <span>14h00-
                 20h00</span></p>
-            <p class="article__wrapper__text"><span class="content-consultation__day">Mardi</span> <span>9:30 -
+            <p class="article__wrapper__text"><span class="content-consultation__day">Mardi</span> <span>9h30 -
                 15h30</span></p>
-            <p class="article__wrapper__text"><span class="content-consultation__day">Vendredi</span> <span>9:30 -
+            <p class="article__wrapper__text"><span class="content-consultation__day">Vendredi</span> <span>9h30 -
                 19h30</span></p>
           </div>
         </div>
