--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
       <img class="banner__img" src="./assets/images/banner-seance-osteopathie.webp" loading="lazy"
         alt="Séance d'ostéopathie">
       <div class="banner__wrapper">
-        <h3 class="banner__title banner__title--intro">Faites le premier pas vers un corps en pleine forme.</h3>
+        <h3 class="banner__title">Faites le premier pas vers un corps en pleine forme.</h3>
         <a class="btn btn-light btn-xl" href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes"
           aria-label="Prendre rendez-vous en ligne">Prendre rendez-vous</a>
       </div>
@@ -360,9 +360,9 @@
         <div class="content-consultation">
           <p> <span class="content-consultation__day">Horaires :</span></p>
           <div>
-            <p><span class="content-consultation__day">Lundi</span> <span>14:00 - 20h00</span></p>
-            <p><span class="content-consultation__day">Mardi</span> <span>9:30 - 15h30</span></p>
-            <p><span class="content-consultation__day">Vendredi</span> <span>9:30 - 19h30</span></p>
+            <p><span class="content-consultation__day">Lundi</span> <span>14h00- 20h00</span></p>
+            <p><span class="content-consultation__day">Mardi</span> <span>9h30 - 15h30</span></p>
+            <p><span class="content-consultation__day">Vendredi</span> <span>9h30 - 19h30</span></p>
           </div>
         </div>
         <div class="content-medical close">
