--- a/osteopathe.html
+++ b/osteopathe.html
@@ -101,18 +101,17 @@
       <img src="./assets/images/ArrowUpIcon.svg" alt="icon fleche">
     </a>
 
-    <section data-aos="fade-in" class="banner banner-intro">
+    <section class="banner banner-intro">
       <img class="banner__img" loading="lazy" src="./assets/images/bannerTeam.webp" alt="séance ostéopathie">
       <div class="banner__wrapper banner__wrapper--intro">
         <h1 class="banner__title banner__title--intro">Votre Ostéopathe</h1>
       </div>
     </section>
   
-    <div class="mw-container article">
+    <div data-aos="fade-in"  class="mw-container article">
       <div class="article__container">
         <div>
-  
-          <article class="article__wrapper">
+          <article  class="article__wrapper">
             <h2 class="article__wrapper__title">A Propos de Moi</h2>
             <p class="article__wrapper__text">Je suis <strong>Henrique Nunes</strong>, ostéopathe avec plus de <strong>15 ans d’expérience</strong>. Mon parcours est riche et diversifié, dédié à l'amélioration du <strong>bien-être</strong> de mes patients. Mon approche est centrée sur le <strong>soulagement des douleurs</strong>, l’<strong>amélioration de la mobilité</strong> et la <strong>prévention des troubles musculo-squelettiques</strong>, grâce à des <strong>techniques ostéopathiques adaptées</strong> à chaque individu.</p>
           </article>
@@ -123,7 +122,7 @@
             <p class="article__wrapper__text">En tant qu'enseignant chez <a class="link-ext" href="https://www.eurosteo.com/">Eurosteo</a> (École d'ostéopathie pour professionnels de santé), je suis l'évolution et l'actualité en <strong>traumatologie du sport</strong> et en <strong>prévention des blessures</strong>.</p>
           </article>
         </div>
-        <img class="article__wrapper__img" loading="lazy" src="./assets/images/osteo1.webp" alt="ostéopathe Henrique Nunes" >
+        <img data-aos="fade-left" class="article__wrapper__img" loading="lazy" src="./assets/images/osteo1.webp" alt="ostéopathe Henrique Nunes" >
       </div>
   
       <article class="article__wrapper">
@@ -162,7 +161,19 @@
         <h2 class="article__wrapper__title">Collaboration avec des Clubs Sportifs</h2>
         <img src="./assets/images/clubs.webp" loading="lazy" alt="Photo des clubs" >
       </article>
-  
+    </div>
+
+    <div class="carousel-container">
+      <div class="carousel-track">
+        <div class="carousel-item"><img src="./assets/images/carousel/2016-09-04 15.37.12.jpg" alt="Photo 1"></div>
+        <div class="carousel-item"><img src="./assets/images/carousel/20200629_222152000_iOS.jpg" alt="Photo 2"></div>
+        <div class="carousel-item"><img src="./assets/images/carousel/20211021_140926000_iOS.jpg" alt="Photo 3"></div>
+        <div class="carousel-item"><img src="./assets/images/carousel/GFNC8774.JPG" alt="Photo 4"></div>
+        <div class="carousel-item"><img src="./assets/images/carousel/IMG_1053.JPG" alt="Photo 5"></div>
+        <div class="carousel-item"><img src="./assets/images/carousel/TFHB-PCHB-6914.jpg" alt="Photo 6"></div>
+        <div class="carousel-item"><img src="./assets/images/carousel/TFHB-PCHB-6988.jpg" alt="Photo 6"></div>
+       
+      </div>
     </div>
   
     <section class="banner">
@@ -195,11 +206,11 @@
         <div class="content-consultation">
           <p class="article__wrapper__text"> <span class="content-consultation__day">Horaires :</span></p>
           <div>
-            <p class="article__wrapper__text"><span class="content-consultation__day">Lundi</span> <span>14:00 -
+            <p class="article__wrapper__text"><span class="content-consultation__day">Lundi</span> <span>14h00-
                 20h00</span></p>
-            <p class="article__wrapper__text"><span class="content-consultation__day">Mardi</span> <span>9:30 -
+            <p class="article__wrapper__text"><span class="content-consultation__day">Mardi</span> <span>9h30 -
                 15h30</span></p>
-            <p class="article__wrapper__text"><span class="content-consultation__day">Vendredi</span> <span>9:30 -
+            <p class="article__wrapper__text"><span class="content-consultation__day">Vendredi</span> <span>9h30 -
                 19h30</span></p>
           </div>
         </div>
