--- a/consultation-osteopathie-bruges.html
+++ b/consultation-osteopathie-bruges.html
@@ -60,7 +60,8 @@
 
 <header class="header">
 
-    <nav class="navbar mw-container">    <div class="header__wrapper">
+    <nav class="navbar mw-container">    
+      <div class="header__wrapper">
         <a href="index.html">
           <p class="header__name">Henrique Nunes</p>
           <p class="header__wrapper__job">Ostéopathe à Bruges</p>
@@ -71,21 +72,21 @@
         <div class="navbar__menu">
           <a class="navbar__link" href="index.html">Accueil</a>
           <a class="navbar__link navbar__link__mobile" href="osteopathie.html">Ostéopathie</a>
-          <a class="navbar__link navbar__link__mobile" href="consultation-osteopathie.html">Consultation</a>
-          <a class="navbar__link navbar__link__mobile" href="quand-consulter-un-osteopathe.html">Quand
+          <a class="navbar__link navbar__link__mobile" href="consultation-osteopathie-bruges.html">Consultation</a>
+          <a class="navbar__link navbar__link__mobile" href="quand-consulter-un-osteopathe-bruges.html">Quand
             consulter ?</a>
           <div class="dropdown">
             <span class="navbar__link">Ostéopathie</span>
             <div class="dropdown-content">
               <div class="dropdown-content__wrapper">
                 <a class="dropdown-content__wrapper__link" href="osteopathie.html">Définition</a>
-                <a class="dropdown-content__wrapper__link" href="consultation-osteopathie.html">Consultation</a>
-                <a class="dropdown-content__wrapper__link" href="quand-consulter-un-osteopathe.html">Quand
+                <a class="dropdown-content__wrapper__link" href="consultation-osteopathie-bruges.html">Consultation</a>
+                <a class="dropdown-content__wrapper__link" href="quand-consulter-un-osteopathe-bruges.html">Quand
                   consulter ?</a>
               </div>
             </div>
           </div>
-          <a class="navbar__link" href="osteopathe.html">Votre ostéopathe</a>
+          <a class="navbar__link" href="osteopathe-bruges.html">Votre ostéopathe</a>
           <a class="navbar__link" href="tarifs.html">Tarifs</a>
         </div>
       </div>
@@ -100,92 +101,61 @@
     <a href="#up" class="icon__wrapper">
       <img src="./assets/images/ArrowUpIcon.svg" alt="icon fleche">
     </a>
-
     <section class="banner banner-intro">
-      <img class="banner__img" loading="lazy" src="./assets/images/bannerTeam.webp" alt="séance ostéopathie">
+      <img class="banner__img" src="./assets/images/banner-osteo.webp" alt="séance osteopathie" loading="lazy">
       <div class="banner__wrapper banner__wrapper--intro">
-        <h1 class="banner__title banner__title--intro">Votre Ostéopathe</h1>
+       <h1 class="banner__title banner__title--intro">Consultation d'Ostéopathie</h1>
       </div>
     </section>
-  
-    <div data-aos="fade-in"  class="mw-container article">
-      <div class="article__container">
-        <div>
-          <article  class="article__wrapper">
-            <h2 class="article__wrapper__title">A Propos de Moi</h2>
-            <p class="article__wrapper__text">Je suis <strong>Henrique Nunes</strong>, ostéopathe avec plus de <strong>15 ans d’expérience</strong>. Mon parcours est riche et diversifié, dédié à l'amélioration du <strong>bien-être</strong> de mes patients. Mon approche est centrée sur le <strong>soulagement des douleurs</strong>, l’<strong>amélioration de la mobilité</strong> et la <strong>prévention des troubles musculo-squelettiques</strong>, grâce à des <strong>techniques ostéopathiques adaptées</strong> à chaque individu.</p>
-          </article>
-  
-          <article class="article__wrapper">
-            <h2 class="article__wrapper__title">Parcours Professionnel</h2>
-            <p class="article__wrapper__text">Diplômé en <strong>ostéopathie</strong>, j'ai acquis plus de <strong>15 ans d'expérience</strong> en travaillant avec divers publics, y compris des <strong>athlètes de haut niveau</strong>, des <strong>enfants</strong>, des <strong>adultes</strong> et des <strong>seniors</strong>. J’ai également travaillé avec divers <strong>clubs sportifs de haut niveau</strong> (<a class="link-ext" href="https://tremblayhandball.com/">Tremblay-en-France Handball</a>, <a class="link-ext" href="https://www.facebook.com/p/Marne-La-Vall%C3%A9e-Basket-Val-Maubu%C3%A9e-61553830123844/?locale=fr_FR">MLV Basket</a>, <a class="link-ext" href="https://torcyfoot.footeo.com/">Torcy Football</a>, <a class="link-ext" href="https://www.insep.fr/fr">INSEP</a>, <a class="link-ext" href="https://www.jsa-bmb.fr/">JSA Bordeaux</a>, <a class="link-ext" href="https://www.cdhn.fr/">CDHN</a>) et assuré des consultations en <strong>cabinet</strong> ainsi qu’à <strong>domicile</strong>. Mon parcours inclut aussi de la formation en <strong>entreprise</strong> sur la <strong>prévention des troubles</strong> liés à l'inactivité physique avec <a class="link-ext" href="https://www.atid-consulting.com/">Atid Consulting</a>, enrichissant ainsi mon approche clinique.</p>
-            <p class="article__wrapper__text">En tant qu'enseignant chez <a class="link-ext" href="https://www.eurosteo.com/">Eurosteo</a> (École d'ostéopathie pour professionnels de santé), je suis l'évolution et l'actualité en <strong>traumatologie du sport</strong> et en <strong>prévention des blessures</strong>.</p>
-          </article>
-        </div>
-        <img data-aos="fade-left" class="article__wrapper__img" loading="lazy" src="./assets/images/osteo1.webp" alt="ostéopathe Henrique Nunes" >
-      </div>
-  
-      <article class="article__wrapper">
-        <h2 class="article__wrapper__title">Mes Compétences</h2>
-        <p class="article__wrapper__text">Je mets à votre disposition une large gamme de <strong>compétences</strong> :</p>
-        <ul class="article__wrapper__list">
-          <li><strong>Traitement des douleurs chroniques et aiguës</strong> : dos, articulations, migraines, troubles digestifs, etc.</li>
-          <li><strong>Suivi des sportifs</strong> : prévention des blessures, amélioration des performances, récupération rapide.</li>
-          <li><strong>Accompagnement des femmes enceintes et des nourrissons</strong> : suivi de la grossesse, post-partum, coliques du nourrisson.</li>
-          <li><strong>Gestion du stress et des tensions</strong> : techniques de relaxation et d’équilibrage du système nerveux.</li>
-        </ul>
-      </article>
-  
-      <article class="article__wrapper">
-        <h2 class="article__wrapper__title">Expertise en Sport et Préparation Physique</h2>
-        <p class="article__wrapper__text">En tant qu'<strong>ostéopathe du sport</strong> et <strong>préparateur physique</strong>, j'accompagne les <strong>athlètes</strong> et les patients en quête de <strong>bien-être physique</strong>. </p>
-        <p>Ma méthode est axée sur :</p>
-        <ul class="article__wrapper__list">
-          <li><strong>L’optimisation des performances</strong></li>
-          <li><strong>La prévention des blessures</strong></li>
-          <li><strong>Le rétablissement rapide et complet</strong> grâce à des techniques ostéopathiques spécialisées</li>
-        </ul>
-      </article>
-  
-      <article class="article__wrapper">
-        <h2 class="article__wrapper__title">Approche Holistique</h2>
-        <p class="article__wrapper__text">Je combine mes compétences pour offrir une <strong>prise en charge globale et personnalisée</strong>. J'utilise des <strong>techniques manuelles adaptées</strong> pour :</p>
-        <ul class="article__wrapper__list">
-          <li><strong>Restaurer la mobilité des tissus</strong></li>
-          <li><strong>Améliorer la posture</strong></li>
-          <li><strong>Soulager durablement les douleurs</strong> grâce à des techniques ostéopathiques spécialisées</li>
-        </ul>
-      </article>
-  
-      <article class="article__wrapper">
-        <h2 class="article__wrapper__title">Collaboration avec des Clubs Sportifs</h2>
-        <img src="./assets/images/clubs.webp" loading="lazy" alt="Photo des clubs" >
-      </article>
+    <div data-aos="fade-in" class="mw-container article">
+        <p class="article__intro"> <strong>Une séance d’ostéopathie</strong> dure généralement entre <strong>45 minutes et une heure</strong>. Lors de cette consultation, l’ostéopathe prend le temps de connaître son patient et d’évaluer ses antécédents pour répondre efficacement à ses besoins.</p>
+        <article class="article__wrapper">
+            <h2 class="article__wrapper__title">L'interrogatoire</h2>
+            <p>Lors de la <strong> première séance </strong>, un <strong>entretien approfondi</strong> est réalisé, au cours duquel l'ostéopathe investigue la raison de la consultation. Cela inclut :</p>
+            <ul class="article__wrapper__list">
+              <li> <strong>Origine de la douleur</strong> (événement déclencheur, durée, mouvements douloureux).</li>
+              <li> <strong>Examen médical</strong> éventuel apporté par le patient.</li>
+              <li>Investigation de toutes les sphères du corps : <strong>neurologique, cardio-pulmonaire, digestif, uro-néphrologique.</strong></li>
+              <li>Discussion des <strong>antécédents médicaux personnels et familiaux.</strong></li>
+              <li>Évaluation de la <strong>qualité du sommeil, pratique sportive, alimentation</strong>, et du cadre de vie.</li>
+            </ul>
+            <p>Pour les <strong>séances suivantes</strong>, l'entretien se concentre sur l'évolution de la douleur.</p>
+        </article>
+        <article class="article__wrapper">
+          <h2 class="article__wrapper__title">L'examen clinique</h2>
+          <p>Si nécessaire, l'ostéopathe commence par des <strong>tests d'exclusion</strong>, visant à écarter toute pathologie qui ne relèverait pas de son domaine.</p>
+          <p>Si ces tests confirment qu'il peut poursuivre, il réalise une série de tests physiques prenant en compte <strong> l’ensemble du corps</strong>, afin <strong> d’identifier l’origine des douleurs</strong>.</p>
+        </article>
+        <article class="article__wrapper">
+          <h2 class="article__wrapper__title">Le traitement</h2>
+          <p>Une fois l'examen terminé, l'ostéopathe applique un traitement personnalisé, utilisant différentes techniques manuelles :</p>
+            <ul class="article__wrapper__list">
+            <li><strong>Techniques structurelles</strong></li>
+            <li><strong>Techniques viscérales</strong></li>
+            <li><strong>Techniques fasciales</strong></li>
+            <li><strong>Techniques crâniennes</strong></li>
+          </ul>
+          <p>Selon les cas, plusieurs séances peuvent être nécessaires pour corriger durablement les dysfonctionnements.</p>
+        </article>
+        <article class="article__wrapper">
+          <h2 class="article__wrapper__title">Préparer votre consultation</h2>
+          <p>Pour une consultation optimale, il est recommandé d'apporter :</p>
+            <ul class="article__wrapper__list">
+            <li>Vos <strong>radiographies</strong> ou derniers examens médicaux.</li>
+            <li>Pour <strong>les nourrissons et les enfants</strong>, pensez à prendre leur <strong> carnet de santé</strong>.</li>
+          </ul>
+        </article>
     </div>
+    
 
-    <div class="carousel-container">
-      <div class="carousel-track">
-        <div class="carousel-item"><img src="./assets/images/carousel/2016-09-04 15.37.12.jpg" alt="Photo 1"></div>
-        <div class="carousel-item"><img src="./assets/images/carousel/20200629_222152000_iOS.jpg" alt="Photo 2"></div>
-        <div class="carousel-item"><img src="./assets/images/carousel/20211021_140926000_iOS.jpg" alt="Photo 3"></div>
-        <div class="carousel-item"><img src="./assets/images/carousel/GFNC8774.JPG" alt="Photo 4"></div>
-        <div class="carousel-item"><img src="./assets/images/carousel/IMG_1053.JPG" alt="Photo 5"></div>
-        <div class="carousel-item"><img src="./assets/images/carousel/TFHB-PCHB-6914.jpg" alt="Photo 6"></div>
-        <div class="carousel-item"><img src="./assets/images/carousel/TFHB-PCHB-6988.jpg" alt="Photo 6"></div>
-       
-      </div>
-    </div>
-  
     <section class="banner">
-      <img class="banner__img" src="./assets/images/banner-seance-osteopathie.webp" loading="lazy" alt="Séance d'ostéopathie">
+      <img class="banner__img" src="./assets/images/banner-seance-osteopathie.webp" alt="séance osteopathie" loading="lazy">
       <div class="banner__wrapper">
         <h3 class="banner__title">Faites le premier pas vers un corps en pleine forme.</h3>
         <a class="btn btn-light btn-xl" href="https://www.doctolib.fr/osteopathe/bruges/henrique-nunes" aria-label="Prendre rendez-vous en ligne">Prendre rendez-vous</a>
       </div>
     </section>
-  
   </main>
-  
   <footer class="footer">
     <div class="footer__wrapper mw-container">
       <article class="footer__wrapper__me">
