--- a/index.html
+++ b/index.html
@@ -61,10 +61,9 @@
 
 <body>
   <div class="rect" data-aos="fade-left"></div>
-
 <header class="header">
 
-    <nav v class="navbar mw-container">   <div class="header__wrapper">
+    <nav class="navbar mw-container">   <div class="header__wrapper">
         <a href="index.html">
           <p class="header__name">Henrique Nunes</p>
           <p class="header__wrapper__job">Ostéopathe à Bruges</p>
@@ -75,21 +74,21 @@
         <div class="navbar__menu">
           <a class="navbar__link" href="index.html">Accueil</a>
           <a class="navbar__link navbar__link__mobile" href="osteopathie.html">Ostéopathie</a>
-          <a class="navbar__link navbar__link__mobile" href="consultation-osteopathie.html">Consultation</a>
-          <a class="navbar__link navbar__link__mobile" href="quand-consulter-un-osteopathe.html">Quand
+          <a class="navbar__link navbar__link__mobile" href="consultation-osteopathie-bruges.html">Consultation</a>
+          <a class="navbar__link navbar__link__mobile" href="quand-consulter-un-osteopathe-bruges.html">Quand
             consulter ?</a>
           <div class="dropdown">
             <span class="navbar__link">Ostéopathie</span>
             <div class="dropdown-content">
               <div class="dropdown-content__wrapper">
                 <a class="dropdown-content__wrapper__link" href="osteopathie.html">Définition</a>
-                <a class="dropdown-content__wrapper__link" href="consultation-osteopathie.html">Consultation</a>
-                <a class="dropdown-content__wrapper__link" href="quand-consulter-un-osteopathe.html">Quand
+                <a class="dropdown-content__wrapper__link" href="consultation-osteopathie-bruges.html">Consultation</a>
+                <a class="dropdown-content__wrapper__link" href="quand-consulter-un-osteopathe-bruges.html">Quand
                   consulter ?</a>
               </div>
             </div>
           </div>
-          <a class="navbar__link" href="osteopathe.html">Votre ostéopathe</a>
+          <a class="navbar__link" href="osteopathe-bruges.html">Votre ostéopathe</a>
           <a class="navbar__link" href="tarifs.html">Tarifs</a>
         </div>
       </div>
@@ -153,7 +152,7 @@
                 L’ostéopathie aide à corriger les déséquilibres, améliore la posture et soutient le bien-être général de
                 votre enfant.
               </p>
-              <a href="quand-consulter-un-osteopathe.html?#enfants" class="osteo__all__figcaption__link">En
+              <a href="quand-consulter-un-osteopathe-bruges.html?#enfants" class="osteo__all__figcaption__link">En
                 savoir plus</a>
             </figcaption>
           </figure>
@@ -169,7 +168,7 @@
                 corps pendant la grossesse, facilite l'accouchement et soulage les douleurs postnatales, tout en
                 soutenant le bien-être de la maman et du bébé.
               </p>
-              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe.html?#femmes-enceintes">En
+              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe-bruges.html?#femmes-enceintes">En
                 savoir plus</a>
             </figcaption>
           </figure>
@@ -184,7 +183,7 @@
                 L’accouchement peut provoquer des tensions sur le crâne et le corps de votre bébé, entraînant des
                 troubles digestifs, déformations crâniennes ou inconforts. L’ostéopathie aide à rétablir son équilibre
                 et favorise son bien-être. Offrez à votre enfant un accompagnement doux pour bien démarrer sa vie. </p>
-              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe.html?#nouveau-nes">En savoir
+              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe-bruges.html?#nouveau-nes">En savoir
                 plus</a>
             </figcaption>
           </figure>
@@ -200,7 +199,7 @@
                 aide à soulager les douleurs liées à l'arthrose, les tensions musculaires et les troubles fonctionnels,
                 tout en soutenant la santé globale.
               </p>
-              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe.html?#seniors">En savoir
+              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe-bruges.html?#seniors">En savoir
                 plus</a>
             </figcaption>
           </figure>
@@ -218,7 +217,7 @@
                 douleurs chroniques. Elle améliore la mobilité, optimise les performances et favorise la récupération
                 après l’effort.
               </p>
-              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe.html?#sportifs">En savoir
+              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe-bruges.html?#sportifs">En savoir
                 plus</a>
             </figcaption>
           </figure>
@@ -234,7 +233,7 @@
                 en entreprise prévient les troubles musculo-squelettiques, réduit les arrêts maladie et optimise
                 l'ergonomie, favorisant ainsi un environnement de travail plus productif et sain.
               </p>
-              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe.html?#entreprise">En savoir
+              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe-bruges.html?#entreprise">En savoir
                 plus</a>
             </figcaption>
           </figure>
@@ -258,7 +257,7 @@
                 chez vous, avec tout le matériel nécessaire pour assurer une séance de qualité dans le calme et la
                 sécurité de votre espace personnel.</p>
             </div>
-            <button class="btn btn-light" onclick="window.location.href='consultation-osteopathie.html'">En savoir
+            <button class="btn btn-light" onclick="window.location.href='consultation-osteopathie-bruges.html'">En savoir
               plus</button>
           </article>
         </div>
@@ -274,7 +273,7 @@
                 confortable. Profitez d'un soin personnalisé, adapté à vos besoins, pour soulager vos douleurs et
                 améliorer votre mobilité.</p>
             </div>
-            <button class="btn btn-light" onclick="window.location.href='consultation-osteopathie.html'">En savoir
+            <button class="btn btn-light" onclick="window.location.href='consultation-osteopathie-bruges.html'">En savoir
               plus</button>
           </article>
           <img class="photo" src="assets/images/clinique-medical-stadium.webp" loading="lazy"
@@ -378,33 +377,8 @@
     </div>
   </footer>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script src="js/index.js"></script>
-  <script>
+  <script type="module" src="js/index.js"></script>
 
-
-    document.addEventListener('DOMContentLoaded', function () {
-      AOS.init({
-        // Global settings:
-        disable: false, // accepts following values: 'phone', 'tablet', 'mobile', boolean, expression or function
-        startEvent: "DOMContentLoaded", // name of the event dispatched on the document, that AOS should initialize on
-        initClassName: "aos-init", // class applied after initialization
-        animatedClassName: "aos-animate", // class applied on animation
-        useClassNames: false, // if true, will add content of `data-aos` as classes on scroll
-        disableMutationObserver: false, // disables automatic mutations' detections (advanced)
-        debounceDelay: 50, // the delay on debounce used while resizing window (advanced)
-        throttleDelay: 99, // the delay on throttle used while scrolling the page (advanced)
-
-        // Settings that can be overridden on per-element basis, by `data-aos-*` attributes:
-        offset: 120, // offset (in px) from the original trigger point
-        delay: 0, // values from 0 to 3000, with step 50ms
-        duration: 500, // values from 0 to 3000, with step 50ms
-        easing: "ease", // default easing for AOS animations
-        once: false, // whether animation should happen only once - while scrolling down
-        mirror: false, // whether elements should animate out while scrolling past them
-        anchorPlacement: "top-bottom", // defines which position of the element regarding to window should trigger the animation
-      });
-    });
-  </script>
 </body>
 
 </html>
