--- a/osteopathie.html
+++ b/osteopathie.html
@@ -7,7 +7,7 @@
   
   <!-- Meta Description -->
   <meta name="description" 
-    content="Henrique Nunes, ostéopathe à Bruges (33520), vous propose des soins personnalisés pour soulager vos douleurs et améliorer votre bien-être. Consultations en cabinet ou à domicile." />
+    content="Henrique Nunes, ostéopathe à Bruges (33520), vous propose des soins personnalisés pour soulager vos douleurs et améliorer votre bien-être. Consultations Ostéopathiques à Bruges en cabinet ou à domicile." />
   
   <!-- Fonts and Styles -->
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -71,21 +71,21 @@
         <div class="navbar__menu">
           <a class="navbar__link" href="index.html">Accueil</a>
           <a class="navbar__link navbar__link__mobile" href="osteopathie.html">Ostéopathie</a>
-          <a class="navbar__link navbar__link__mobile" href="consultation-osteopathie.html">Consultation</a>
-          <a class="navbar__link navbar__link__mobile" href="quand-consulter-un-osteopathe.html">Quand
+          <a class="navbar__link navbar__link__mobile" href="consultation-osteopathie-bruges.html">Consultation</a>
+          <a class="navbar__link navbar__link__mobile" href="quand-consulter-un-osteopathe-bruges.html">Quand
             consulter ?</a>
           <div class="dropdown">
             <span class="navbar__link">Ostéopathie</span>
             <div class="dropdown-content">
               <div class="dropdown-content__wrapper">
                 <a class="dropdown-content__wrapper__link" href="osteopathie.html">Définition</a>
-                <a class="dropdown-content__wrapper__link" href="consultation-osteopathie.html">Consultation</a>
-                <a class="dropdown-content__wrapper__link" href="quand-consulter-un-osteopathe.html">Quand
+                <a class="dropdown-content__wrapper__link" href="consultation-osteopathie-bruges.html">Consultation</a>
+                <a class="dropdown-content__wrapper__link" href="quand-consulter-un-osteopathe-bruges.html">Quand
                   consulter ?</a>
               </div>
             </div>
           </div>
-          <a class="navbar__link" href="osteopathe.html">Votre ostéopathe</a>
+          <a class="navbar__link" href="osteopathe-bruges.html">Votre ostéopathe</a>
           <a class="navbar__link" href="tarifs.html">Tarifs</a>
         </div>
       </div>
@@ -101,7 +101,7 @@
       <img src="./assets/images/ArrowUpIcon.svg" alt="icon fleche">
     </a>
     <section class="banner banner-intro">
-      <img class="banner__img" src="./assets/images/bannerosteo.webp" loading="lazy" alt="séance osteopathie">
+      <img class="banner__img" src="./assets/images/bannerosteo.webp" loading="lazy" alt="Séance d'ostéopathie personnalisée à Bruges">
       <div class="banner__wrapper banner__wrapper--intro">
        <h1 class="banner__title banner__title--intro">L’ostéopathie </h1>
       </div>
@@ -236,6 +236,7 @@
       once: false, // whether animation should happen only once - while scrolling down
       mirror: false, // whether elements should animate out while scrolling past them
       anchorPlacement: "top-bottom", // defines which position of the element regarding to window should trigger the animation
+      
   });
 });
   </script>
