--- a/quand-consulter-un-osteopathe.html
+++ b/quand-consulter-un-osteopathe.html
@@ -70,21 +70,21 @@
         <div class="navbar__menu">
           <a class="navbar__link" href="index.html">Accueil</a>
           <a class="navbar__link navbar__link__mobile" href="osteopathie.html">Ostéopathie</a>
-          <a class="navbar__link navbar__link__mobile" href="consultation-osteopathie.html">Consultation</a>
-          <a class="navbar__link navbar__link__mobile" href="quand-consulter-un-osteopathe.html">Quand
+          <a class="navbar__link navbar__link__mobile" href="consultation-osteopathie-bruges.html">Consultation</a>
+          <a class="navbar__link navbar__link__mobile" href="quand-consulter-un-osteopathe-bruges.html">Quand
             consulter ?</a>
           <div class="dropdown">
             <span class="navbar__link">Ostéopathie</span>
             <div class="dropdown-content">
               <div class="dropdown-content__wrapper">
                 <a class="dropdown-content__wrapper__link" href="osteopathie.html">Définition</a>
-                <a class="dropdown-content__wrapper__link" href="consultation-osteopathie.html">Consultation</a>
-                <a class="dropdown-content__wrapper__link" href="quand-consulter-un-osteopathe.html">Quand
+                <a class="dropdown-content__wrapper__link" href="consultation-osteopathie-bruges.html">Consultation</a>
+                <a class="dropdown-content__wrapper__link" href="quand-consulter-un-osteopathe-bruges.html">Quand
                   consulter ?</a>
               </div>
             </div>
           </div>
-          <a class="navbar__link" href="osteopathe.html">Votre ostéopathe</a>
+          <a class="navbar__link" href="osteopathe-bruges.html">Votre ostéopathe</a>
           <a class="navbar__link" href="tarifs.html">Tarifs</a>
         </div>
       </div>
