--- a/quand-consulter-un-osteopathe-bruges.html
+++ b/quand-consulter-un-osteopathe-bruges.html
@@ -565,7 +565,7 @@
     </div>
   </footer>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
- <script src="js/index.js"></script>
+ <script type="module" src="js/index.js"></script>
 </body>
 
 </html>
