add type module in script

--- a/osteopathe-bruges.html
+++ b/osteopathe-bruges.html
@@ -230,7 +230,7 @@
     </div>
   </footer>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
- <script src="js/index.js"></script>
+ <script type="module" src="js/index.js"></script>
 </body>
 
 </html>
