--- a/osteopathie.html
+++ b/osteopathie.html
@@ -101,7 +101,7 @@
       <img src="./assets/images/ArrowUpIcon.svg" alt="icon fleche">
     </a>
     <section class="banner banner-intro">
-      <img class="banner__img" src="./assets/images/bannerosteo.webp" loading="lazy" alt="Séance d'ostéopathie personnalisée à Bruges">
+      <img class="banner__img" src="./assets/images/banner-physio.jpg" loading="lazy" alt="Séance d'ostéopathie personnalisée à Bruges">
       <div class="banner__wrapper banner__wrapper--intro">
        <h1 class="banner__title banner__title--intro">L’ostéopathie </h1>
       </div>
@@ -213,7 +213,7 @@
     </div>
   </footer>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
- <script src="js/index.js"></script>
+ <script type="module" src="js/index.js"></script>
   
 </body>
 
